--- a/style.css
+++ b/style.css
@@ -43,19 +43,20 @@ body {
 .details {
     font-family: 'Shadows Into Light';
     font-size: 25px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     line-height: 1.6;
 }
 
 .btn {
+    font-family: 'Creepster';
     background-color: #f39c12;
-    color: white;
+    color: black;
     font-size: 20px;
     padding: 10px 20px;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
-    margin-top: 20px;
+    margin-top: 10px;
     transition: background-color 0.3s;
 }
 
@@ -65,7 +66,7 @@ body {
 
 .footer {
     text-align: center;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .footer p {
